# rua

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  bin.hpp  chan.hpp  co.hpp  co_pool.hpp  compile_flags.txt  coro.hpp  coro_pool.hpp  fiber.hpp  hook.hpp  hook.inc  include.pm5  obj.hpp  observer.hpp  predef.hpp  premake5.lua  process.hpp  sched.hpp  scheduler.hpp  shared_obj.hpp  strenc.hpp  unsafe_ptr.hpp
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
cmake/: CPM.cmake  DepPull.cmake  deppull.cmake  depu.cmake  rua.cmake  ruaConfig.cmake
include/rua/: adapted_ptr.hpp  always_move.hpp  any.hpp  any_ptr.hpp  any_word.hpp  assign.hpp  async.hpp  bin.hpp  bin.old.hpp  binary.hpp  bit.hpp  blended_ptr.hpp  byte.hpp  bytes.hpp  callable.hpp  callchain.hpp  chan.hpp  channel.hpp  check.hpp  chrono.hpp  co.hpp  co_pool.hpp  code_fn.hpp  code_seg.hpp  conc.hpp  concurrent.hpp  console.hpp  cont.hpp  continuation.hpp  coroutine.hpp  cp.hpp  disable_msvc_sh1t.h  dylib.hpp  dype.hpp  enable_msvc_sh1t.h  error.hpp  exec.hpp  fiber.hpp  file.hpp  forward_list.hpp  (+66 more)
include/rua/async/: await.hpp  result.hpp
include/rua/binary/: bits.hpp  bytes.hpp
include/rua/chrono/: clock.hpp  duration.hpp  now.hpp  tick.hpp  time.hpp  zone.hpp
include/rua/conc/: await.hpp  chan.hpp  future.hpp  mutex.hpp  once.hpp  promise.hpp  then.hpp  wait.hpp
include/rua/concurrent/: chan.hpp  co.hpp  co_pool.hpp  sched.hpp
include/rua/cont/: restore_amd64_sysv.inc  restore_amd64_win.inc  restore_and_save_amd64_sysv.inc  restore_and_save_i386_win.inc  restore_i386_win.inc  save_amd64_sysv.inc  save_amd64_win.inc  save_i386.inc
include/rua/continuation/: restore_and_save_amd64_win.inc  restore_and_save_i386.inc  restore_i386.inc  save_i386_win.inc
include/rua/cp/: chan.hpp  co.hpp  co_pool.hpp  coro.hpp  coro_pool.hpp  sched.hpp  tls.hpp
include/rua/dylib/: dyfn.h  posix.hpp  win32.hpp
include/rua/dype/: any.hpp  any_ptr.hpp  any_word.hpp  interface_ptr.hpp  type_info.hpp  variant.hpp
include/rua/exec/: cont.hpp
include/rua/file/: base.hpp  c.hpp  posix.hpp  times.hpp  win32.hpp
include/rua/generic/: any_ptr.hpp  any_word.hpp
include/rua/gnc/: any_ptr.hpp  any_word.hpp  block.hpp  data.hpp  getter.hpp
include/rua/hard/: posix.hpp  win32.hpp
include/rua/io/: abstr.hpp  abstract.hpp  c.hpp  c_stream.hpp  data.hpp  itfs.hpp  os_stream.hpp  stream.hpp  sys.hpp  sys_stream.hpp  util.hpp  win32.hpp  win32_stream.hpp
include/rua/mem/: data.hpp  get.hpp  getter.hpp  protect.hpp
include/rua/net/: ip.hpp
include/rua/os/: pipe.hpp  process.hpp
include/rua/pipe/: win32.hpp
src/cont/: build.js  restore_amd64_win.s  restore_and_save_amd64_win.s  save_i386_win.s
src/continuation/: build.js  restore_amd64_sysv.s  restore_and_save_amd64_sysv.s  restore_and_save_i386.s  restore_and_save_i386_win.s  restore_i386_win.s  save_amd64_win.s  save_i386.s
src/ucontext/: arm_gas.s  build.js  get_amd64_sysv.s  get_amd64_win.s  get_i386.s  get_i386_fasm.s  get_i386_win.s  get_i386_win_fasm.s  set_amd64_sysv.s  set_amd64_sysv_fasm.s  set_amd64_win.s  set_amd64_win_fasm.s  set_i386.s  set_i386_win.s  set_i386_win_fasm.s  swap_amd64_sysv.s  swap_amd64_win.s  swap_amd64_win_fasm.s  swap_i386.s  swap_i386_win.s  swap_i386_win_fasm.s
test/: adapted_ptr.cpp  bin.cpp  blended_ptr.cpp  bytes.cpp  chan.cpp  channel.cpp  chrono.cpp  co.cpp  cont.cpp  continuation.cpp  coroutine.cpp  cp.cpp  fiber.cpp  find.cpp  interface.cpp  interface_ptr.cpp  main.cpp  poly.cpp  ref.cpp  thread.cpp  time.cpp  ucontext.cpp
(+298 files in other folders)
